# querykey

./: !run.bat  !runClaude.bat  !testrun.bat  .gitattributes  .gitignore  CLAUDE.md  README.md  README_cleanvibe.md  package.json  queue.md  todo.md  tsconfig.json
.claude/: settings.local.json
.github/workflows/: ci.yml  pages.yml
app/: README.md  pubspec.yaml
app-electron/: index.html  main.js  package-lock.json  package.json  preload.js  renderer.js  styles.css
app/lib/: main.dart
app/linux/: CMakeLists.txt
app/test/: widget_test.dart
app/web/: index.html  manifest.json
app/windows/: CMakeLists.txt
backend/: __init__.py  server.py
chat/: README.md
cleanvibe_examples/: CLAUDE.md  README.md
docs/: architecture.md  card-format.md  data-model.md  markdown-schema.md  versions-comparison.md  why-go.md
electron/: main.js
hack-a-thon-docs/: judges.md
planning/: architecture.md  installer.md  pitch.md
scripts/: build.js
secretarybird-old/: !testrun.bat  CLAUDE.md  README.md  build_backend.py  package-lock.json  package.json  requirements.txt  todo.md  tsconfig.renderer.json  vitest.config.ts
server/: Cargo.toml
server-go-old/: README.md  go.mod  go.sum
server/cmd/dump-messages/: main.go
server/cmd/secretarybird/: main.go
server/internal/api/: handlers.go
server/internal/graph/: fuseki.go
server/src/: config.rs  discord.rs  ingest.rs  lib.rs  main.rs  mcp.rs  models.rs  ws.rs
server/src/api/: mod.rs
server/src/calendar/: mod.rs
server/src/card/: mod.rs
server/src/dashboard/: mod.rs
server/src/graph/: loca.rs  memory.rs  mod.rs
server/src/identity/: mod.rs
server/src/openclaw/: bridge.rs  mod.rs  wsl.rs
server/src/vault/: mod.rs
server/src/wikilink/: mod.rs
server/src/workflow/: mod.rs
site/: CNAME  identity.css  index.html
test-data/: FACEBOOK ADS PERFORMANCE.xlsx.csv  newsletter_subscribers_partial.csv  reviews_appstore_RAW.txt  support tickets march.json  tiktok_analytics_export.tsv  twitter mentions dump.json  youtube comments - product demo vid.csv
(+101 files in other folders)
