[package]
name = "querykey-server"
version = "0.1.0"
edition = "2021"
description = "QueryKey server (Rust). Local-first ingest -> derived graph (Loca) -> real-time sync. Port of server-go-old/."
license = "MIT"

[[bin]]
name = "querykey-server"
path = "src/main.rs"

[[bin]]
name = "dump-messages"
path = "src/bin/dump_messages.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time", "process"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
async-trait = "0.1"
toml = { version = "0.8", default-features = false, features = ["parse"] }

# Loca graph store. Optional so the crate always builds even without the
# sibling Loka checkout. Enable with: --features loca (production build).
# Path dep: querykey/server -> Github/Loka (renamed from the old SutraDB).
# NB: cargo validates path deps at manifest load even when the feature is
# off, so this path must resolve for ANY build, not just --features loca.
loka-core = { path = "../../Loka/loka-core", optional = true }
loka-sparql = { path = "../../Loka/loka-sparql", optional = true }

# Discord bot (heavy). Optional so the default build never pulls it.
# Enable with --features discord.
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "rustls_backend"], optional = true }

[features]
default = []
loca = ["dep:loka-core", "dep:loka-sparql"]
discord = ["dep:serenity"]
